# pagmo_tests

./: .gitignore  CMakeLists.txt  README.md  environment.devenv.yml  environment.yml  pagmo-env.yml
examples/: quickstart.cpp
notebooks/: pagmo_first_example.ipynb
